# SMILE

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  clippy.toml  lefthook.yml  ralph.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.sdd/codebase/: STACK.md
.sdd/memory/: constitution.md
crates/smile-cli/: Cargo.toml
crates/smile-cli/src/: main.rs
crates/smile-container/: Cargo.toml
crates/smile-container/src/: lib.rs  manager.rs
crates/smile-orchestrator/: Cargo.toml
crates/smile-orchestrator/src/: api.rs  config.rs  error.rs  lib.rs  loop_state.rs  tutorial.rs  websocket.rs
crates/smile-report/: Cargo.toml
crates/smile-report/src/: json.rs  lib.rs  markdown.rs
crates/smile-report/src/snapshots/: smile_report__markdown__tests__critical_gaps_only.snap  smile_report__markdown__tests__empty_report.snap  smile_report__markdown__tests__full_report.snap
discovery/: OPEN_QUESTIONS.md  OPEN_QUESTIONS.md.backup  SPEC.md  STATE.md  STATE.md.backup
discovery/archive/: DECISIONS.md  DECISIONS.md.backup  ITERATIONS.md  RESEARCH.md  REVISIONS.md
docker/: Dockerfile.base
python/: README.md  pyproject.toml
python/smile_wrappers/: __init__.py  config.py  mentor.py  output.py  prompts.py  student.py  utils.py
python/tests/: __init__.py  test_integration.py  test_mentor.py  test_output_parser.py  test_student.py
retro/: P2.md  P3.md  P4.md  P5.md
specs/001-smile-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-smile-loop/checklists/: requirements.md
specs/001-smile-loop/contracts/: orchestrator-api.yaml  websocket-events.yaml
specs/001-smile-loop/research-artifacts/: BOLLARD_ADVANCED_PATTERNS.md  BOLLARD_BEST_PRACTICES.md  BOLLARD_INDEX.md  BOLLARD_QUICK_REFERENCE.md  BOLLARD_RESEARCH_SUMMARY.md  BOLLARD_WORKFLOW_GUIDE.md  INDEX_LLM_WRAPPERS.md  LLM_CLI_QUICK_REFERENCE.md  LLM_CLI_WRAPPER_GUIDE.md  README_LLM_CLI_WRAPPERS.md  START_HERE.md  bollard_examples.rs  examples_llm_cli_usage.py  llm_cli_wrapper.py  test_llm_cli_wrapper.py
specs/001-smile-loop/retro/: P10.md  P11.md  P12.md  P6.md  P7.md  P8.md  P9.md
tests/integration/: Cargo.toml  test_loop.rs  test_websocket.rs
tests/integration/fixtures/: README.md
tests/integration/fixtures/docker-setup-tutorial/: EXPECTED_GAPS.md  tutorial.md
tests/integration/fixtures/mock-cli/: mock_llm
tests/integration/fixtures/mock-cli/scenarios/: docker_setup.json  docker_setup_mentor.json  mentor_responses.json  missing_npm.json  python_fastapi.json  python_fastapi_mentor.json
tests/integration/fixtures/python-fastapi-tutorial/: EXPECTED_GAPS.md  smile.json  tutorial.md
tests/integration/fixtures/sample-tutorial/: EXPECTED_GAPS.md  smile.json  tutorial.md
