[workspace]
resolver = "2"
members = [
    "crates/smile-cli",
    "crates/smile-orchestrator",
    "crates/smile-container",
    "crates/smile-report",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SMILE Team"]
license = "MIT"
repository = "https://github.com/smile-loop/smile"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Docker
bollard = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
# Pin time for MSRV 1.75 compatibility (time-core 0.1.8+ requires edition2024/Rust 1.85+)
time = ">=0.3.17, <0.3.42"
# Pin idna_adapter for MSRV 1.75 compatibility (v1.2.0+ uses icu4x which requires Rust 1.81+)
idna_adapter = ">=1.0.0, <1.2.0"
# Pin serde_with for MSRV 1.75 compatibility (v3.15.0+ requires Rust 1.76+)
serde_with = ">=3.0.0, <3.15.0"
# Pin indexmap for MSRV 1.75 compatibility (v2.12.0+ requires Rust 1.82+)
indexmap = ">=2.0.0, <2.12.0"
# Pin native-tls for MSRV 1.75 compatibility (v0.2.14+ requires Rust 1.80+)
native-tls = ">=0.2.0, <0.2.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Regex
regex = "1.10"

# Testing
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow certain patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Deny certain patterns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
