[package]
name = "smile-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI entry point for SMILE Loop"

[dependencies]
smile-orchestrator = { path = "../smile-orchestrator" }
smile-container = { path = "../smile-container" }
smile-report = { path = "../smile-report" }

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
