[package]
name = "smile-container"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Docker container management for SMILE Loop"

[dependencies]
bollard.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
