[package]
name = "smile-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Loop orchestrator with HTTP API and WebSocket for SMILE Loop"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures.workspace = true
regex.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
