[package]
name = "smile-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
smile-orchestrator = { path = "../../crates/smile-orchestrator" }
smile-container = { path = "../../crates/smile-container" }
smile-report = { path = "../../crates/smile-report" }

chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0"

[[test]]
name = "test_loop"
path = "test_loop.rs"
